@@ -1,3 +1,9 @@
+2001-01-15  Bruno Haible  <haible@clisp.cons.org>
+
+        * init.lisp (load): Additional keyword argument :extra-file-types.
+        * spvw.d (main) [WIN32_NATIVE]: Pass :extra-file-types '(".bat") to
+          LOAD.
+
 2001-01-14  Bruno Haible  <haible@clisp.cons.org>
 
         * configure: In avcall and callback, do "make check" instead of
